@@ -22,7 +22,6 @@ my $use_hard_links    = ''; # hardlinks do not work across fs boundaries
 my $postinst_hook     = '';          #Normally we do not
 my $minimal_swap      = '';          # Do not swap symlinks
 my $ignore_depmod_err = '';          # normally we do not
-my $kernel_arch       = "=B";
 my $ramdisk           = '';
 my $package_name      = "linux-image-$version";
 
@@ -98,8 +97,6 @@ if ($do_symlink && $no_symlink) {
 
 # most of our work is done in $image_dest (nominally /)
 chdir("$image_dest") or die "could not chdir to $image_dest:$!\n";
-
-$ENV{KERNEL_ARCH}=$kernel_arch if $kernel_arch;
 
 
 die "Internal Error: Could not find image (" . $realimageloc
