@@ -24,7 +24,6 @@ my $link_in_boot      = "";
 my $kimage            = "=K";
 my $initrd            = "=I";     # initrd kernel
 my $postrm_hook       = '';       #Normally we do not
-my $kernel_arch       = "=B";
 my $ramdisk           = "=MK";  # List of tools to create initial ram fs.
 my $package_name    = "linux-image-$version";
 
@@ -65,8 +64,6 @@ $image_dest =~ s|/+$|/|o;
 if (-d "$image_dest") {
   chdir("$image_dest") or die "could not chdir to $image_dest:$!\n";
 }
-
-$ENV{KERNEL_ARCH}=$kernel_arch if $kernel_arch;
 
 
 ######################################################################
